[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oliglow"
version = "0.1.0"
description = "Deisotoping and deconvolution tools for tandem mass spectrometry (LCMS) of nucleic acid oligos"
authors = [
    { name = "Moshir Harsh", email = "btemoshir@gmail.com" }
]
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    "pythonnet>=3.0.5",
    "polars>=1.27.1",
    "numpy>=2.2.4",
    "ms_deisotope>=0.0.56",
    "typed-argument-parser>=1.10.1"
]

[project.scripts]
oliglow = "oliglow.cli:main"

[project.urls]
Homepage = "https://github.com/btemoshir/oliglow"